[package]
name = "cargo-wgsl"
version = "0.0.8"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

description = "Validate wgsl in rust projects"
keywords = ["CLI", "wgsl", "cargo"]
license = "MIT"
repository = "https://github.com/PolyMeilex/cargo-wgsl"

[dependencies]
colored = "2.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
jsonrpc-stdio-server = "17.0"
tokio = { version = "0.2", features = ["rt-core"] }
naga = { version = "0.7.0", features = ["wgsl-in", "validate"] }
lsp-server = "0.5.2"
lsp-types = "0.90.1"
serde_json = "1.0.68"
simplelog = "0.10.2"
log = "0.4.14"
