[package]
name = "cargo-wgsl"
version = "0.0.16"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

description = "Validate wgsl in rust projects"
keywords = ["CLI", "wgsl", "cargo"]
license = "MIT"
repository = "https://github.com/PolyMeilex/cargo-wgsl"

[dependencies]
colored = "3.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
jsonrpc-stdio-server = "18.0.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "io-util",
    "time",
    "net",
] }
naga = { version = "25.0.1", features = ["wgsl-in"] }
